--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body{
     font-family: 'Lora', serif;
 }
+h5:hover{
+    background-color: azure;
+    color: blue;
+    border: 5px 8px;
+}
 h5{
     float: right;
     text-align: right;
